Enpoint de adição de contatos, exclusão e edição e fix de erros de serialização no projeto